# ENSAFI2023

./: .gitignore  Analisis Exploratorio.twb  Notas del proyecto.md  README.md  pyproject.toml
datos/conjunto_de_datos_thogar_ensafi_2023/catalogos/: ent.csv  p4_2.csv  p4_9_2.csv
datos/conjunto_de_datos_tmodulo_ensafi_2023/catalogos/: edad_v.csv  gra_control.csv  niv_bienes.csv  p5_14.csv  p5_15.csv  p5_16.csv  p5_19a.csv  p5_22.csv  p5_2_5.csv  p5_6.csv  p5_8.csv  p6_12.csv  p6_13.csv  p7_12_4.csv  p7_5_5.csv  p7_9_2.csv  p9_2.csv  salario_ent.csv
datos/conjunto_de_datos_tsdem_ensafi_2023/catalogos/: niv.csv  p3_7.csv  p3_9.csv
datos/conjunto_de_datos_tvivienda_ensafi_2023/catalogos/: p1_6.csv  p1_9.csv
datos/original_raw/: TVIVIENDA.csv  ensafi_2023_descriptor_de_archivo.xlsx
datos/original_raw/conjunto_de_datos_thogar_ensafi_2023/catalogos/: p4_3.csv
datos/original_raw/conjunto_de_datos_tmodulo_ensafi_2023/catalogos/: dep_eco.csv  niv_estres.csv  p10_2.csv  p5_13.csv  p5_17.csv  p5_19.csv  p5_21.csv  p5_3.csv  p6_1_4.csv  p6_4.csv  p7_7_5.csv  p7_8_1.csv  p8_1_2.csv  p9_1.csv  sal_min_zf.csv
datos/original_raw/conjunto_de_datos_tsdem_ensafi_2023/catalogos/: edad.csv  gra.csv  p3_6_1.csv  p3_6_2.csv  p3_6_3.csv  paren.csv  region.csv
datos/original_raw/conjunto_de_datos_tvivienda_ensafi_2023/catalogos/: p1_5.csv  p1_7.csv  p1_8_5.csv  tloc.csv
datos/original_raw/conjunto_de_datos_tvivienda_ensafi_2023/metadatos/: metadatos_ensafi_2023.txt
datos/procesados/: ensafi_2023_descriptor_de_archivo.xlsx
src/ensafi2023/: ETL notebook.ipynb
