[tool.poetry]
name = "ensafi2023"
version = "0.1.0"
description = ""
authors = ["Ivan Ramos <ivan.ramos@kroger.com>"]
readme = "README.md"
packages = [{include = "ensafi2023", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
