[tool.poetry]
name = "ensafi2023"
version = "0.1.0"
description = ""
authors = ["Ivan Ramos <ivan.ramos@kroger.com>"]
readme = "README.md"
packages = [{include = "ensafi2023", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9.7"
ipykernel = "^6.29.5"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
